# uk-gov-ai-observatory

./: .env.example  .gitignore  main.py  pyproject.toml
.claude/: launch.json
config/: ai_relevance.yaml  announcements.yaml
dashboard/: app.py
data/gold/: ai_growth_zones.parquet  atrs_records.parquet  gov_announcements.parquet  procurement_notices.parquet  v_announcement_trends.parquet  v_capacity_overview.parquet  v_reporting_gap.parquet  v_spend_by_month.parquet  v_wpq_trends.parquet  written_questions.parquet
data/gold/procurement_notices/: 2021.parquet  2022.parquet  2023.parquet  2025.parquet  2026.parquet
data/seeds/: ai_growth_zones.csv  org_aliases.csv
docs/: design-v2-axis-b-and-deepening.md  uk-gov-ai-observatory-prd.md
scripts/: announcements_ingest.py  atrs_ingest.py  export_gold.py  init_db.py  procurement_backfill.py  procurement_ingest.py  wpq_ingest.py
src/common/: db.py  http.py  org_aliases.py  seeds.py
src/ingest/: ai_relevance.py  announcements.py  atrs.py  procurement.py  procurement_bulk.py  written_questions.py
tests/: test_ai_relevance.py  test_announcements.py  test_atrs.py  test_db.py  test_procurement.py  test_procurement_bulk.py  test_seeds.py  test_written_questions.py
